about page alignment fix

--- a/src/assets/scss/_search.scss
+++ b/src/assets/scss/_search.scss
@@ -3,8 +3,9 @@
   width: 84%;
   max-width: 350px;
   margin: 0 auto;
-  height: 150px;
+  // max-height: 150px;
   position: relative;
+  // border: 2px solid white;
 }
 
 .container-2 {
